[package]
name = "dist-dec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rep3-aes"
path = "src/rep3_aes_main.rs"


[dependencies]
rustls = {version = "0.22.1"}
rustls-pemfile = "2.0.0"
rand = {version = "0.8.5"}
rand_chacha = "0.3.1"
sha2 = "0.10.8"
toml = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.113"
clap = {version = "4.4.13", features = ["derive"]}
ghash = "0.5.0"
bytemuck = { version = "1.14.0", features = ["derive"]}
itertools = "0.12.0"
hex = "0.4.3"

[dev-dependencies]
