[package]
name = "maestro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
benchmark-helper = ["criterion"]
default = ["clmul"]
verbose-timing = []
clmul = []

[dependencies]
rustls = {version = "0.22.1"}
rustls-pemfile = "2.0.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.113"
toml = "0.8"
oneshot = "0.1.6"
ghash = "0.5.0"
bytemuck = { version = "1.14.0", features = ["derive"]}
itertools = "0.12.1"
lazy_static = {version = "1.4.0" }
criterion = {version ="0.4", optional = true }
rayon = "1.10.0"
rand = {version = "0.8.5"}
sha2 = "0.10.8"
rand_chacha = "0.3.1"
clap = {version = "4.4.13", features = ["derive"]}
hex = "0.4.3"
array-init = "2.1.0"

[dev-dependencies]
# serial_test = "*"
criterion = "0.5.1"
aes-gcm = "0.10.3"

[[bin]]
name = "rep3-aes-mozaik"
path = "src/rep3_aes_mozaik.rs"

[lib]
required-features = ["verbose-timing"]

[[bench]]
name = "gf2p64_mult_benchmark"
harness = false
required-features = ["clmul"]

[[bench]]
name = "gf2p64_ip_benchmark"
harness = false
required-features = ["clmul"]

[[bench]]
name = "clmul_bench"
harness = false
required-features = ["clmul"]

[[bench]]
name = "unpack_bitslice"
harness = false