[package]
name = "rep3-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = {version = "0.22.1"}
rustls-pemfile = "2.0.0"
serde = {version = "1.0", features = ["derive"]}
toml = "0.8"
oneshot = "0.1.6"
itertools = "0.12.1"
lazy_static = {version = "1.4.0" }
rand = {version = "0.8.5"}
sha2 = "0.10.8"
rand_chacha = "0.3.1"
rayon = "1.10.0"

[features]
verbose-timing = []